grammar.txt
*Program:
	Statement*
Statement:
	ExpressionStatement
	VariableDeclaration
	VariableAssignment
	If
	While
ExpressionStatement:
	Expression ';'
VariableDeclaration:
	'var' Identifier '=' Expression ';'
VariableAssignment:
	Identifier '=' Expression ';'
If:
	'if' '(' Expression ')' Block
While:
	'while' '(' Expression ')' Block
Block:
	'{' Statement* '}'
Expression:
	Equality
Equality:
	Equality "==" Relational
	Relational
Relational:
	Relational "<" Additive
	Additive
Additive:
	Additive ("+" | "-") Multiplicative
	Multiplicative
Multiplicative:
	Multiplicative ("*" | "/" | "%") Unary
	Unary
Unary:
	('+' | '-' | '!' | '~') Unary
	Primary
// Primary: Primitive ('(' Arguments? ')' | '.' Identifier)*
Primary:
	Call
	MemberAccess
	Primitive
Call:
	Primary '(' Arguments? ')'
Arguments:
	Expression (',' Expression)*
MemberAccess:
	Primary '.' Identifier
Primitive:
	Number
	Identifier
	'(' Expression ')'
